@@ -28,6 +28,12 @@ Library
 
 - The wsgiref package is now installed properly on Unix.
 
+Extension Modules
+-----------------
+
+- Bug #1512695: cPickle.loads could crash if it was interrupted with
+  a KeyboardInterrupt.
+
 Build
 -----
 
